feat: 短信dto补充过期时间字段, 如果时间过期则消费端不发送消息

--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -1,13 +1,15 @@
-# 1. 整合腾讯云短信服务
-```
-整合腾讯云短信服务请申请腾讯云短信秘钥并配置在nacos的 tencent-cloud.yml文件上
-```
 
-# 2. token设计
+# 1. token设计
 
 ```
 app用户: app@
 saas用户: saas@
 admin用户: admin@
 
+```
+
+# 2. 待完善内容
+```
+mq消息发送表记录
+mq消息消费表记录
 ```
